--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag root_path do %>
+<%= form_tag ({:controller => 'cart', :action => 'update'}) do %>
 <table>
   <tr>
     <th width="50px">ID</th>
@@ -15,12 +15,19 @@
     <td><%= product[:product].name %></td>
     <td><%= image_tag(product[:product].image_url, class: 'img-responsive replace-2x image_cart', alt: 'item') %></td>
     <td><%= product[:product].formattedprice %></td>
-    <td><%= text_field_tag(:quantity, product[:quantity], size: 2, maxlength: 2)  %></td>
-    <td>$<%= product[:quantity]* (product[:product].amount/100.0) %></td>
+    <td><%= text_field_tag("quantity[]", product[:quantity], size: 2, maxlength: 2)  %></td>
+    <td><%= product[:product].formattedprice[0].to_s %>
+    <%= product[:quantity].to_i * (product[:product].amount/100.0) %></td>
     <td><%= link_to 'Delete',product , method: :delete%></td>
+
   </tr>
   <% end %>
 </table>
-<!--<button type="submit">submit</button>-->
+
+<%= button_tag(type: "submit", class: "btn btn-primary") do %>
+Update
 <%end%>
+<%end%>
+<%= link_to 'Check out', check_out_path, class: "btn btn-primary check_out_button"%>
+
 
